--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.global {
+  background-color: red;
+  min-height: 100vh;
+}
